style.css
@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;700&display=swap');

body {
  overflow-x: hidden;
  background: #FFFFFF;
  font-family: 'Nunito Sans', sans-serif;
  color: #86868B;
}

/* Navigation */
.navbar {
  padding: .2rem;
  background: rgba(0, 0, 0, .8)!important;
  backdrop-filter: saturate(180%) blur(20px);
}
.navbar-brand img {
  height: 1.2rem;
}
.navbar-nav {
  margin: 0 auto;
}
.navbar-nav li {
  padding-right: 3rem;
}
.navbar-dark .navbar-nav .nav-link {
  font-size: .9rem;
  color: #F5F5F7;
  opacity: 80%;
}
.navbar-dark .navbar-nav .nav-link.active,
.navbar-dark .navbar-nav .nav-link:hover {
  color: #F5F5F7;
  opacity: 100%;
}

/* Common Section Styles */
.offset:before {
  display: block;
  content: "";
  margin-top: -2rem;
  height: 2rem;
}
.jumbotron {
  margin-bottom: 1rem;
  border-radius: 0;
  background-color: #FBFBFD;
}
.not-jumbotron {
  margin: 3rem 0;
}
.jumbotron.no-margin-bottom {
  margin-bottom: 0;
}
h2.heading {
  margin-bottom: 2rem;
  font-weight: 700;
  color: #1D1D1F;
}
.heading-underline {
  margin: 0 auto 1rem;
  width: 3rem;
  height: .2rem;
  background-color: #2997ff; /* color-accent */
}
h2.heading2 {
  margin-bottom: 1rem;
  font-weight: 700;
  color: #1D1D1F;
}
h4.subheading {
  margin-bottom: 2rem;
}
.heading-underline-2 {
  margin: 0 auto 1rem;
  width: 3rem;
  height: .2rem;
  background-color: #2997ff;
}
.home-inner {
  background-image: url(images/landing_page.jpg);
}
.home-inner-fixed {
  background-image: url(images/quote_bg.jpg);
}

/* Landing Page */
.caption {
  position: absolute;
  top: 28%;
  width: 100%;
  max-width: 100%;
  color: white;
  z-index: 1;
}
.caption .title {
  padding-bottom: 2rem;
}
.caption .title h1 {
  margin-bottom: 0;
  font-size: 3.8rem;
  font-weight: 700;
  text-shadow: .1rem .1rem .8rem black;
}
.caption .subtitle {
  padding-bottom: 3.2rem;
}
.caption .subtitle h5 {
  margin-bottom: 0.5rem;
  font-style: 2rem;
  text-shadow: .1rem .1rem .5rem black;
}
.btn-lg {
  border-width: medium;
  border-radius: 0;
  padding: .6rem 1.3rem;
  font-size: 1.1rem;
}

/* About */
/*.narrow {
  width: 75%;
  margin: 1.5rem auto;
  padding-top: 2rem;
}*/
/*.narrow h1 {
  font-size: 2.4rem;
}*/
/*.btn-secondary {
  border-width: medium;
  border-radius: 0;
  font-size: 1.2rem;
  padding: .6rem 1.2rem;
  margin: 1rem;
  color: white;
  background-color: #1EBBA3;
  border-color: #1EBBA3;
}
.btn-secondary:hover {
  background-color: #189582 ;
  border-color: #189582 ;
}*/
.about img {
  border-radius: 50%;
  width: 100%;
}
.about p {
  padding-left: 2rem;
  font-size: 1.2rem;
}

/* Projects */
.projects {
  padding: 1rem 0.4rem;
}
.project {
  padding: 1rem 0.4rem;
}
.projects img {
  margin-bottom: 1rem;
  width: 100%;
}
.project h4 {
  font-weight: 700;
  color: #1D1D1F;
}

/* Technologies */
.technology i {
  margin-bottom: 1rem;
  color: #1D1D1F;
}
.technology h5 {
  margin-bottom: 1rem;
}
.technology-title {
  font-weight: 700;
  color: #1D1D1F;
}

/* Resume */
.resume {
  padding: 3rem;
  background: white;
}
.resume-category {
  margin-top: 3rem;
}
.resume-category h4 {
  font-weight: 700;
  color: #1D1D1F;
}
.resume-item {
  box-shadow: 0 0 .1rem rgba(0, 0, 0, .3);
  padding: 3rem;
}
.resume-item.offset {
  margin-bottom: 1rem;
}
.resume-item h4 {
  margin-bottom: 1rem;
  color: #1D1D1F;
}
.resume-item h5 {
  margin-bottom: 1rem;
}
.resume-item i {
  margin-right: .5rem;
}

/* Quote */
.quote {
  position: relative;
}
.screen-dark {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.5);
}
.quote-text {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
}
.quote-text h1 {
  font-size: 3.8rem;
  font-weight: 700;
  color: white;
  text-shadow: .1rem .1rem .8rem black;
}
.quote-text h1 i {
  position: relative;
  right: 1rem;
  bottom: 1.5rem;
  font-size: 2.3rem;
}

/* Talks */
.talk {
  margin-bottom: 1rem;
  padding: 0;
  height: 20rem;
}
.talk .image {
  padding: 0;
  height: 100%;
}
.talk img {
  padding: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
}
.talk .description {
  padding: 2rem;
  height: 100%;
  background: #FBFBFD;
}
.talk h4 {
  margin-bottom: 1rem;
  font-weight: 700;
  color: #1D1D1F;
}
.talk h6 {
  margin-bottom: 1rem;
}
.talk i {
  margin-right: .5rem;
}
.talk p {
  font-size: 1.2rem;
}

/* Competitions */
.competition {
  margin-bottom: 1rem;
  padding: 0 0.4rem;
}
.competition .image {
  height: 20rem;
}
.competition img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}
.competition .description {
  padding: 2rem;
  background: #FBFBFD;
}
.competition h4 {
  margin-bottom: 1rem;
  font-weight: 700;
  color: #1D1D1F;
}
.competition h6 {
  margin-bottom: 1rem;
}
.competition i {
  margin-right: .5rem;
}
.competition p {
  font-size: 1.2rem;
}
.competition p span {
  font-weight: 700;
  color: #2997ff;
}

/* Awards */
.award {
  margin-bottom: 1rem;
  padding: 0 0.4rem;
}
.award .image {
  height: 13rem;
}
.award img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}
.award .description {
  padding: 2rem;
  background: #FBFBFD;
}
.award h4 {
  margin-bottom: 1rem;
  font-weight: 700;
  color: #1D1D1F;
}
.award h6 {
  margin-bottom: 1rem;
}
.award i {
  margin-right: .5rem;
}
.award p {
  font-size: 1.2rem;
}
.award p span {
  font-weight: 700;
  color: #2997ff;
}

/* Border */




/*============= SECTION =============*/

.narrow {
  width: 75%;
  margin: 1.5rem auto;
  padding-top: 2rem;
}
.narrow h1 {
    font-size: 2.4rem;
  }
.btn-secondary {
  border-width: medium;
  border-radius: 0;
  padding: .6rem 1.2rem;
  font-size: 1.2rem;
  text-transform: uppercase;
  margin: 1rem;
  border-color: #1EBBA3;
  background-color: #1EBBA3;
  color: white;
}
.btn-secondary:hover,
.btn-secondary:focus {
  border-color: #189582;
  background-color: #189582;
  color: white;
}

/*============ BOOTSTRAP BREAK POINTS:



Extra small (xs) devices (portrait phones, less than 576px)
No media query since this is the default in Bootstrap

Small (sm) devices (landscape phones, 576px and up)
@media (min-width: 576px) { ... }

Medium (md) devices (tablets, 768px and up)
@media (min-width: 768px) { ... }

Large (lg) devices (desktops, 992px and up)
@media (min-width: 992px) { ... }

Extra (xl) large devices (large desktops, 1200px and up)
@media (min-width: 1200px) { ... }

=============*/

